pikvm/pikvm#1406: Web: Fixed keypad keys overlapping

--- a/web/share/css/keypad.css
+++ b/web/share/css/keypad.css
@@ -34,7 +34,7 @@ div.keypad div.keypad-block:not(:first-child) {
 
 div.keypad div.keypad-row {
 	display: flex;
-	flex-wrap: wrap;
+	flex-wrap: nowrap;
 	white-space: nowrap;
 	height: 40px;
 	margin-bottom: 5px;
